[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/core_sync/dock/rhytm_row.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 8.0
bg_color = Color( 0.2, 0.227451, 0.309804, 1 )

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.219608, 0.266667, 0.368627, 1 )
border_width_left = 2
border_color = Color( 0.407843, 0.611765, 0.909804, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.12549, 0.141176, 0.192157, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.407843, 0.611765, 0.909804, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.226023, 0.253133, 0.334462, 1 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.4, 0.423529, 0.482353, 1 )

[node name="row" type="PanelContainer"]
margin_right = 1016.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 9 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1016.0
margin_bottom = 20.0
alignment = 1

[node name="name" type="LineEdit" parent="HBoxContainer"]
margin_right = 333.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
placeholder_text = "Name"

[node name="calls" type="Button" parent="HBoxContainer"]
margin_left = 337.0
margin_right = 465.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 0 )
focus_mode = 0
text = "events"

[node name="steps" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 469.0
margin_right = 908.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3

[node name="steps" type="Label" parent="HBoxContainer/steps"]
margin_right = 55.0
margin_bottom = 20.0
size_flags_vertical = 5
custom_styles/normal = SubResource( 11 )
text = "steps:"
align = 1
valign = 1

[node name="Panel" type="PanelContainer" parent="HBoxContainer/steps"]
margin_left = 59.0
margin_right = 439.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/steps/Panel"]
margin_right = 380.0
margin_bottom = 20.0

[node name="step_1" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true

[node name="step_2" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_left = 24.0
margin_right = 44.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true

[node name="step_3" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_left = 48.0
margin_right = 68.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true

[node name="step_4" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_left = 72.0
margin_right = 92.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true

[node name="step_5" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_left = 96.0
margin_right = 116.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
toggle_mode = true

[node name="step_6" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_left = 120.0
margin_right = 140.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
toggle_mode = true

[node name="step_7" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_left = 144.0
margin_right = 164.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
toggle_mode = true

[node name="step_8" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_left = 168.0
margin_right = 188.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
toggle_mode = true

[node name="step_9" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_left = 192.0
margin_right = 212.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true

[node name="step_10" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_left = 216.0
margin_right = 236.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true

[node name="step_11" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_left = 240.0
margin_right = 260.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true

[node name="step_12" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_left = 264.0
margin_right = 284.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true

[node name="step_13" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_left = 288.0
margin_right = 308.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
toggle_mode = true

[node name="step_14" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_left = 312.0
margin_right = 332.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
toggle_mode = true

[node name="step_15" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_left = 336.0
margin_right = 356.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
toggle_mode = true

[node name="step_16" type="Button" parent="HBoxContainer/steps/Panel/HBoxContainer"]
margin_left = 360.0
margin_right = 380.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
focus_mode = 0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
toggle_mode = true

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 912.0
margin_right = 992.0
margin_bottom = 20.0
rect_min_size = Vector2( 80, 0 )

[node name="remove" type="Button" parent="HBoxContainer"]
margin_left = 996.0
margin_right = 1016.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
hint_tooltip = "remover"
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 26 )
custom_styles/focus = SubResource( 26 )
custom_styles/disabled = SubResource( 26 )
custom_styles/normal = SubResource( 26 )
text = "x"

[connection signal="text_entered" from="HBoxContainer/name" to="." method="_on_name_text_entered"]
[connection signal="pressed" from="HBoxContainer/calls" to="." method="_on_calls_pressed"]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_1" to="." method="_on_step_toggled" binds= [ 0 ]]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_2" to="." method="_on_step_toggled" binds= [ 1 ]]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_3" to="." method="_on_step_toggled" binds= [ 2 ]]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_4" to="." method="_on_step_toggled" binds= [ 3 ]]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_5" to="." method="_on_step_toggled" binds= [ 4 ]]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_6" to="." method="_on_step_toggled" binds= [ 5 ]]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_7" to="." method="_on_step_toggled" binds= [ 6 ]]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_8" to="." method="_on_step_toggled" binds= [ 7 ]]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_9" to="." method="_on_step_toggled" binds= [ 8 ]]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_10" to="." method="_on_step_toggled" binds= [ 9 ]]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_11" to="." method="_on_step_toggled" binds= [ 10 ]]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_12" to="." method="_on_step_toggled" binds= [ 11 ]]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_13" to="." method="_on_step_toggled" binds= [ 12 ]]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_14" to="." method="_on_step_toggled" binds= [ 13 ]]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_15" to="." method="_on_step_toggled" binds= [ 14 ]]
[connection signal="toggled" from="HBoxContainer/steps/Panel/HBoxContainer/step_16" to="." method="_on_step_toggled" binds= [ 15 ]]
[connection signal="pressed" from="HBoxContainer/remove" to="." method="_on_remove_pressed"]
